<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NikoTon</string>
    <string name="client_id">868733980552-k8h9mie5go2utq0un7bmrl2m0nlr4r2h.apps.googleusercontent.com</string>
    <string name="s_o">Afmelden</string>
    <string name="b_m">Terug naar main</string>
    <string name="main_sub">Welkom!\nWat wil je vandaag doen?</string>
    <string name="pract_sub">Welk stuk wil je oefenen? </string>
    <string name="play_role">Welke rol speel je?</string>"
    <string name="btn_oefn">Oefenen</string>
    <string name="btn_imp">Importeren</string>
    <string name="hard_1">Toneeltext</string>
    <string name="imp_sub">Welk bestand wil je importeren?</string>
    <string name="title_activity_practice">PracticeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_authrec">AuthrecActivity</string>
</resources>